<resources>
    <string name="app_name">Written Done</string>
    <string name="app_folder">WrittenDone</string>
    <string name="picture_folder">pictures</string>
    <string name="thumbnail_folder">thumbnails</string>
    <string name="mainActivitySign">Task list</string>
    <string name="textToPrivacyPolicy">Privacy policy</string>
    <string name="linkToPrivacyPolicy">https://dmitrypogorelov.github.io/privacy_policy_written_done_en.html</string>

    <string name="save_button">Save</string>
    <string name="saveAndAddButtonText">Save and add more</string>
    <string name="headerNewTask">New task</string>
    <string name="headerEditTask">Edit Task</string>
    <string name="deleteTaskQuestion">Delete task</string>
    <string name="deleteNoNameTaskQuestion">Delete this task?</string>
    <string name="deleteTaskYes">Delete</string>
    <string name="deleteTaskCancel">Cancel</string>
    <string name="recordAddedSuccess">Task added successfully!</string>

    <string name="row_layout_header">Task header</string>
    <string name="row_layout_content">This is task content example</string>
    <string name="row_layout_datetime">23.05.2019 16:48</string>
    <string name="row_layout_trashcan_desc">Delete task</string>
    <string name="row_layout_pict_quantity">3</string>
    <string name="row_layout_paperclip">Paperclip</string>
    <string name="row_layout_pict_thumbnail">Attached picture</string>

    //Ошибки и предупреждения
    <string name="emptyRecordWarning">Empty task can\'t be saved!</string>
    <string name="errorInsert">Failed to add record to database!</string>
    <string name="deviceHasNoCameraError">Device has no camera!</string>
    <string name="photoNotAddedToDBError">Failed to add photo!</string>
    <string name="fileNotCopied">Failed to copy the file!</string>
    <string name="errorPicturesDirCreated">Unable to create directory for pictures!</string>
    <string name="errorThumbnailsDirCreated">Unable to create directory for thumbnails!</string>
    <string name="errorPictureDel">Error occurred during picture delete!</string>
    <string name="errorCameraNotFound">Camera not found!</string>

    //Строки меню главного экрана
    <string name="quitSign">Quit</string>

    //Строки меню Script Edit
    <string name="add_photo">Make photo</string>
    <string name="add_picture">Add picture from gallery</string>

    //ContentDescription strings
    <string name="camera_view_hidden_button">Hidden button</string>
    <string name="camera_view_shoot_button">Make photo</string>
    <string name="camera_view_return_button">Back to editor</string>
    <string name="picture_display_imageView">Picture all screen wide</string>
    <string name="picture_holder">Picture from task</string>

    //Строки меню PictureDisplay
    <string name="delete_photo">Delete image</string>
    <string name="sureToDeletePhoto">Delete this image?</string>
    <string name="sureToDeletePhotoYes">Yes!</string>
    <string name="sureToDeletePhotoNo">No!</string>
    <string name="pictFromPict">\u0020out of\u0020</string>

    //Text hints
    <string name="hint_script_title">Header</string>
    <string name="hint_script_content">Content</string>
    
    //Intent filters
    <string name="filter_title_writtendone">Written Done - What had been written will be done!</string>

    //Permissions
    <string name="noCameraAccessGranted">Please allow to use a camera to be able to add photos to task!</string>
    <string name="noExternalStorageAccessGranted">Please allow to read from external storage to be able to add pictures to task!</string>
</resources>
