<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraView">

        <TextureView
            android:id="@+id/camTextureView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/camTextureView">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:visibility="invisible"
            android:layout_weight="1"
            android:contentDescription="@string/camera_view_hidden_button"
            android:layout_marginStart="20dp"
            app:srcCompat="@drawable/camera" />

        <ImageButton
            android:id="@+id/btnCamShoot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="90dp"
            android:background="@null"
            android:layout_weight="5"
            android:foregroundGravity="center"
            android:scaleType="fitCenter"
            android:contentDescription="@string/camera_view_shoot_button"
            app:srcCompat="@drawable/camera" />

        <ImageButton
            android:id="@+id/btnReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            android:minHeight="50dp"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:foregroundGravity="left|center_vertical"
            android:contentDescription="@string/camera_view_return_button"
            app:srcCompat="@drawable/return_arrow_64" />


    </LinearLayout>



</android.support.constraint.ConstraintLayout>